RESOLVED FIXED83442
combine two arrays in XPathException into one
https://bugs.webkit.org/show_bug.cgi?id=83442
Summary combine two arrays in XPathException into one
Lu Guanqun
Reported 2012-04-08 17:46:25 PDT
Combine two arrays in XPathException into one, this helps to remove one FIXME in the file.
Attachments
patch (2.43 KB, patch)
2012-04-08 17:52 PDT, Lu Guanqun
no flags
Patch (2.93 KB, patch)
2012-04-09 22:30 PDT, Lu Guanqun
no flags
Lu Guanqun
Comment 1 2012-04-08 17:52:19 PDT
WebKit Review Bot
Comment 2 2012-04-09 22:23:40 PDT
Comment on attachment 136164 [details] patch Rejecting attachment 136164 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Kit/chromium/third_party/yasm/source/patched-yasm --revision 126079 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 47>At revision 126079. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/12373538
Lu Guanqun
Comment 3 2012-04-09 22:30:23 PDT
WebKit Review Bot
Comment 4 2012-04-09 23:25:12 PDT
Comment on attachment 136400 [details] Patch Clearing flags on attachment: 136400 Committed r113690: <http://trac.webkit.org/changeset/113690>
WebKit Review Bot
Comment 5 2012-04-09 23:25:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.