combine two arrays in XPathException into one https://bugs.webkit.org/show_bug.cgi?id=83442

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-04-09
Reviewed by Kentaro Hara.

No new tests required.

* xml/XPathException.cpp:
(XPathExceptionNameDescription):
(WebCore):
(WebCore::XPathException::initializeDescription):

Canonical link: https://commits.webkit.org/101000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113690 268f45cc-cd09-0410-ab3c-d52691b4dbfc